// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar AnonymousAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-dSfAPu brd-c-dSfAPu-hECRKn-shape-circle brd-c-dSfAPu-kRzPmM-size-default brd-c-dSfAPu-euTbep-default-true brd-c-dSfAPu-iPJLV-css"
  >
    <i
      data-mock-icon="User"
    />
  </span>
</div>
`;

exports[`Avatar Basic should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-dSfAPu brd-c-dSfAPu-hECRKn-shape-circle brd-c-dSfAPu-kRzPmM-size-default brd-c-dSfAPu-ibCEZhf-css"
  >
    <span>
      JS
    </span>
  </span>
</div>
`;

exports[`Avatar ImageAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-dSfAPu brd-c-dSfAPu-hECRKn-shape-circle brd-c-dSfAPu-kRzPmM-size-default brd-c-dSfAPu-iPJLV-css"
  >
    <img
      alt="John Smith Avatar"
      src="https://i.pravatar.cc/150?img=42"
    />
  </span>
</div>
`;

exports[`Avatar SquareAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-dSfAPu brd-c-dSfAPu-liDPBl-shape-square brd-c-dSfAPu-bFVlRr-size-large brd-c-dSfAPu-ibCEZhf-css"
  >
    <span>
      JS
    </span>
  </span>
</div>
`;
